--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -17,7 +17,7 @@
     <!-- Add rule for theme's textdomains -->
     <rule ref="WordPress.WP.I18n">
         <properties>
-            <property name="text_domain" type="array" value="planet4-master-theme,planet4-master-theme-backend"/>
+            <property name="text_domain" type="array" value="planet4-master-theme,planet4-master-theme-backend,planet4-blocks"/>
         </properties>
     </rule>
 
