--- a/composer.json
+++ b/composer.json
@@ -43,9 +43,9 @@
     "squizlabs/php_codesniffer": "^3.5.8",
     "wp-coding-standards/wpcs": "^2.2.0",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
-    "stevegrunwell/phpunit-markup-assertions": "^1.3",
-    "phpunit/phpunit": "^7.5",
-    "wpackagist-plugin/timber-library": "1.18.*",
+    "laminas/laminas-dom": "^2.12",
+    "phpunit/phpunit": "^7.5||^9.5",
+    "wpackagist-plugin/timber-library": "1.22.*",
     "yoast/phpunit-polyfills": "^1.0"
   },
   "scripts": {
