--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
     "squizlabs/php_codesniffer": "^3.5.8",
     "wp-coding-standards/wpcs": "^2.2.0",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
-    "stevegrunwell/phpunit-markup-assertions": "^1.2",
-    "phpunit/phpunit": "^6.2",
+    "phpunit/phpunit": "^7.5||^9.5",
     "yoast/phpunit-polyfills": "^1.0"
   },
   "require": {},
