PLANET-7004 Experiment with Playwright for e2e testing
This is the tool that WordPress is planning to use soon

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ tests/backstop/
 
 # Built css and js assets
 assets/build/*
+
+# Playwright
+/test-results/
+/playwright-report/
+/playwright/.cache/
+/playwright-results/
