--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,7 @@
 {
   "env": {
     "browser": true,
-    "es6": true,
-    "jquery": true,
-    "jest": true
+    "es6": true
   },
   "extends": "eslint:recommended",
   "globals": {
