--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "start": "wp-scripts start",
     "build": "wp-scripts build --mode production",
     "lint:css": "wp-scripts lint-style",
-    "setupgithooks": "bin/copy-git-hooks.sh",
-    "test": "env JEST_TIMEOUT=15000 WP_USERNAME=admin WP_PASSWORD=admin WP_BASE_URL=https://www.planet4.test wp-scripts test-e2e",
-    "test:watch": "env JEST_TIMEOUT=30000 PUPPETEER_HEADLESS=false PUPPETEER_SLOWMO=100 WP_USERNAME=admin WP_PASSWORD=admin WP_BASE_URL=https://www.planet4.test wp-scripts test-e2e"
+    "setupgithooks": "bin/copy-git-hooks.sh"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "*",
@@ -22,7 +20,6 @@
     "@playwright/test": "^1.30.0",
     "@wordpress/components": "^8.3.2",
     "@wordpress/data": "^4.9.2",
-    "@wordpress/e2e-test-utils": "^4.5.0",
     "@wordpress/scripts": "3.3.0",
     "autoprefixer": "^9.7.0",
     "bootstrap": "^5.1.3",
@@ -42,7 +39,6 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "jest-environment-node": "^26.0.1",
     "photoswipe": "^4.1.3",
     "react-dom": "^18.2.0"
   }
