PLANET-7055 Setup Playwright
This commit will also include a simple test

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ node_modules/
 
 # Built css and js assets
 assets/build/*
+
+# Playwright
+/e2e-results/
+/playwright-report/
+/playwright/.cache/
