--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,12 +157,12 @@ commands:
             MASTER_THEME_BRANCH=dev-${BRANCH}#${CIRCLE_SHA1} \
             PLUGIN_GUTENBERG_BLOCKS_BRANCH=dev-main \
             MERGE_SOURCE=git@github.com:greenpeace/planet4-base.git \
-            MERGE_REF=main \
+            MERGE_REF=upgrade-node \
             make ci
       - run:
           name: Test - Clone planet4-docker-compose
           command: |
-            git clone --depth 1 https://github.com/greenpeace/planet4-docker-compose
+            git clone --branch upgrade-node --depth 1 https://github.com/greenpeace/planet4-docker-compose
 
   run-tests:
     parameters:
@@ -227,7 +227,7 @@ jobs:
 
   frontend-tests:
     docker:
-      - image: greenpeaceinternational/p4-unit-tests:node14.19.3
+      - image: greenpeaceinternational/p4-unit-tests:node16.19.0
         auth:
           <<: *docker_auth
     steps:
@@ -246,7 +246,7 @@ jobs:
 
   commitlint:
     docker:
-      - image: greenpeaceinternational/p4-unit-tests:node14.19.3
+      - image: greenpeaceinternational/p4-unit-tests:node16.19.0
         auth:
           <<: *docker_auth
     steps:
@@ -271,7 +271,7 @@ jobs:
 
   a11y-tests:
     docker:
-      - image: greenpeaceinternational/p4-unit-tests:node14.19.3
+      - image: greenpeaceinternational/p4-unit-tests:node16.19.0
         auth:
           <<: *docker_auth
     working_directory: /home/circleci/
@@ -349,7 +349,7 @@ jobs:
 
   create-zip:
     docker:
-      - image: mhart/alpine-node:14
+      - image: mhart/alpine-node:16
         auth:
           <<: *docker_auth
     steps:
