--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@wordpress/components": "^8.3.2",
     "@wordpress/scripts": "3.3.0",
     "autoprefixer": "^9.6.1",
-    "css-loader": "^3.2.0",
+    "css-loader": "^3.6.0",
     "eslint-plugin-react": "^7.20.3",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.14.1",
+    "mini-css-extract-plugin": "^0.8.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "remove-files-webpack-plugin": "^1.1.3",
+    "sass": "^1.57.1",
     "sass-loader": "^8.0.0",
     "svg-sprite-loader": "^6.0.11",
     "terser-webpack-plugin": "^2.2.1",
@@ -35,9 +35,13 @@
     "not dead"
   ],
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.3",
     "classnames": "^2.2.6",
     "lite-youtube-embed": "^0.1.3",
     "popper.js": "^1.15.0"
+  },
+  "engines" : {
+    "npm" : "<10.0.0",
+    "node" : ">=16.0.0 <17.0.0"
   }
 }
