Follow up review
- Update docker image from the create-zip job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -349,7 +349,7 @@ jobs:
 
   create-zip:
     docker:
-      - image: mhart/alpine-node:16
+      - image: cimg/node:16.19
         auth:
           <<: *docker_auth
     steps:
