Follow up review
- Remove using custom branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,12 +157,12 @@ commands:
             MASTER_THEME_BRANCH=dev-${BRANCH}#${CIRCLE_SHA1} \
             PLUGIN_GUTENBERG_BLOCKS_BRANCH=dev-main \
             MERGE_SOURCE=git@github.com:greenpeace/planet4-base.git \
-            MERGE_REF=upgrade-node \
+            MERGE_REF=main \
             make ci
       - run:
           name: Test - Clone planet4-docker-compose
           command: |
-            git clone --branch upgrade-node --depth 1 https://github.com/greenpeace/planet4-docker-compose
+            git clone --depth 1 https://github.com/greenpeace/planet4-docker-compose
 
   run-tests:
     parameters:
