PLANET-7106 Implement ESLint config in Master Theme
- Updated ESLint config to match plugin repo

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
     "jquery": true,
     "amd":true
   },
-  "extends": "eslint:recommended",
+  "extends": ["plugin:@wordpress/eslint-plugin/recommended"],
   "globals": {
     "wp": "readonly"
   },
@@ -30,6 +30,13 @@
       "error",
       "all"
     ],
+    "comma-dangle": ["error", {
+      "arrays": "always-multiline",
+      "objects": "always-multiline",
+      "imports": "always-multiline",
+      "exports": "always-multiline",
+      "functions": "never"
+    }],
     "one-var-declaration-per-line": [
       "error",
       "always"
@@ -39,10 +46,58 @@
         "allowNamedFunctions": true
       }
     ],
+    "jsx-quotes": [
+      "error",
+      "prefer-double"
+    ],
+    "camelcase": "off",
     "new-cap": "error",
     "no-var": 1,
-    "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error"
+    "react/jsx-indent": "off",
+    "react/jsx-indent-props": "off",
+    "react-hooks/rules-of-hooks": "off",
+    "@wordpress/dependency-group": "off",
+    "operator-linebreak": [
+      "error",
+      "after"
+    ],
+    "computed-property-spacing": [
+      "error",
+      "never"
+    ],
+    "space-in-parens": [
+      "error",
+      "never"
+    ],
+    "react/jsx-curly-spacing": [
+      "error",
+      {
+        "when": "never",
+        "allowMultiline": false
+      }
+    ],
+    "space-unary-ops": [
+      "error", {
+        "words": true,
+        "nonwords": false
+      }
+    ],
+    "object-curly-spacing": [
+      "error",
+      "never"
+    ],
+    "array-bracket-spacing": [
+      "error",
+      "never"
+    ],
+    "template-curly-spacing": [
+      "error",
+      "never"
+    ],
+    "arrow-parens": [
+      "error",
+      "as-needed"
+    ]
   },
   "parserOptions": {
     "ecmaVersion": 9,
@@ -56,3 +111,5 @@
     "react"
   ]
 }
+
+
