--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@playwright/test": "^1.30.0",
     "@wordpress/components": "^8.3.2",
     "@wordpress/scripts": "3.3.0",
+    "@wordpress/eslint-plugin": "^2.3.0",
     "autoprefixer": "^9.6.1",
     "bootstrap": "^5.1.3",
     "css-loader": "^3.6.0",
@@ -38,6 +39,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "lite-youtube-embed": "^0.1.3",
+    "eslint": "^5.16.0",
     "popper.js": "^1.15.0"
   },
   "engines": {
