PLANET-7112 Upgrade ESLint and Wordpress Plugin
- Upgraded the packages for eslint and @wordpress/eslint-plugin
- Also removed duplicate rule in eslintrc.json file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -94,14 +94,11 @@
       "error",
       "never"
     ],
-    "computed-property-spacing": [
-      "error",
-      "never"
-    ],
     "arrow-parens": [
       "error",
       "as-needed"
-    ]
+    ],
+    "prettier/prettier": "off"
   },
   "parserOptions": {
     "ecmaVersion": 11,
