Fix CI zip job image
We switched to cimg/node for consistency.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -396,7 +396,7 @@ jobs:
 
   publish-zip:
     docker:
-      - image: mhart/alpine-node:14
+      - image: cimg/node:16.19
         auth:
           <<: *docker_auth
     steps:
