Follow up review
- Install fsevents deps as an otional dep

--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
   "engines": {
     "npm": "<10.0.0",
     "node": ">=16.0.0 <17.0.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
