--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@wordpress/components": "^8.3.2",
     "@wordpress/scripts": "3.3.0",
     "autoprefixer": "^9.6.1",
+    "bootstrap": "^5.1.3",
     "css-loader": "^3.6.0",
     "eslint-plugin-react": "^7.20.3",
     "mini-css-extract-plugin": "^0.8.2",
@@ -35,13 +36,15 @@
     "not dead"
   ],
   "dependencies": {
-    "bootstrap": "^5.2.3",
     "classnames": "^2.2.6",
     "lite-youtube-embed": "^0.1.3",
     "popper.js": "^1.15.0"
   },
-  "engines" : {
-    "npm" : "<10.0.0",
-    "node" : ">=16.0.0 <17.0.0"
+  "engines": {
+    "npm": "<10.0.0",
+    "node": ">=16.0.0 <17.0.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
