--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@babel/plugin-proposal-optional-chaining": "*",
     "@commitlint/cli": "^12.1.4",
     "@greenpeace/dashdash": "^1.1.2",
-    "@playwright/test": "^1.30.0",
+    "@playwright/test": "^1.34.3",
     "@wordpress/components": "^8.3.2",
     "@wordpress/data": "^4.9.2",
+    "@wordpress/e2e-test-utils-playwright": "^0.1.0",
     "@wordpress/eslint-plugin": "^14.3.0",
     "@wordpress/scripts": "3.3.0",
     "autoprefixer": "^9.7.0",
