PLANET-5789 Make sure posts report is only visible to some users
Users who can't edit posts shouldn't see the posts report (for example subscribers)

--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
     "allow-plugins": {
       "composer/installers": true,
       "dealerdirect/phpcodesniffer-composer-installer": true
-    }
+    },
+    "process-timeout": 600
   }
 }
