--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@greenpeace/dashdash": "^1.2.1",
-    "@playwright/test": "^1.30.0",
-    "@wordpress/components": "^8.3.2",
+    "@playwright/test": "^1.35.1",
+    "@wordpress/components": "^8.5.0",
+    "@wordpress/e2e-test-utils-playwright": "^0.5.0",
     "@wordpress/eslint-plugin": "^2.3.0",
     "@wordpress/scripts": "3.3.0",
     "autoprefixer": "^9.6.1",
     "bootstrap": "^5.1.3",
     "css-loader": "^3.6.0",
+    "dotenv": "^16.3.1",
     "eslint-plugin-react": "^7.20.3",
     "mini-css-extract-plugin": "^0.8.2",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
