--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@babel/plugin-proposal-optional-chaining": "*",
     "@commitlint/cli": "^12.1.4",
     "@greenpeace/dashdash": "^1.2.1",
-    "@playwright/test": "^1.34.3",
-    "@wordpress/components": "^8.3.2",
+    "@playwright/test": "^1.35.1",
+    "@wordpress/components": "^8.5.0",
     "@wordpress/data": "^4.9.2",
     "@wordpress/e2e-test-utils-playwright": "^0.1.0",
     "@wordpress/eslint-plugin": "^14.3.0",
@@ -27,6 +27,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "css-loader": "^3.2.0",
+    "dotenv": "^16.3.1",
     "eslint-plugin-react": "^7.20.3",
     "file-loader": "^6.2.0",
     "lodash": "^4.17.21",
