Stop reset job before failure
Use halt to gracefully stop reset job if no instance is found

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -339,6 +339,10 @@ jobs:
           name: Get merge commit test instance
           command: |
             instance=$(find-commit-test-instance.py)
+            if [ "$instance" = "False" || -z "$instance" ]; then
+                echo "No test instance found."
+                circleci-agent step halt
+            fi
             mkdir -p /tmp/workspace/
             echo "$instance" >/tmp/workspace/test-instance
       - run:
