--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "author": "Greenpeace International",
   "license": "MIT",
   "scripts": {
+    "postinstall": "git config core.hooksPath .githooks",
     "start": "wp-scripts start --config webpack.config.js",
     "build": "wp-scripts build --config webpack.config.js --mode production",
-    "lint:css": "wp-scripts lint-style"
+    "lint:css": "wp-scripts lint-style",
+    "lint:php": "./bin/container composer exec phpcs",
+    "lint:php:fix": "./bin/container ./bin/phpcbf"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
@@ -22,6 +25,7 @@
     "css-loader": "^3.6.0",
     "dotenv": "^16.3.1",
     "eslint-plugin-react": "^7.20.3",
+    "lint-staged": "^14.0.1",
     "mini-css-extract-plugin": "^0.8.2",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss-loader": "^3.0.0",
