--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Master theme for the Planet 4 Wordpress project",
   "repository": "git@github.com:greenpeace/planet4-master-theme.git",
   "author": "Greenpeace International",
-  "license": "MIT",
+  "license": "GPL-3.0",
   "scripts": {
     "start": "wp-scripts start --config webpack.config.js",
     "build": "wp-scripts build --config webpack.config.js --mode production",
@@ -12,9 +12,8 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@greenpeace/dashdash": "^1.2.1",
-    "@playwright/test": "^1.36.2",
     "@wordpress/components": "^8.5.0",
-    "@wordpress/e2e-test-utils-playwright": "^0.5.0",
+    "@wordpress/e2e-test-utils-playwright": "^0.8.0",
     "@wordpress/eslint-plugin": "^2.3.0",
     "@wordpress/scripts": "3.3.0",
     "autoprefixer": "^9.6.1",
@@ -24,6 +23,7 @@
     "eslint-plugin-react": "^7.20.3",
     "mini-css-extract-plugin": "^0.8.2",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "playwright": "^1.37.1",
     "postcss-loader": "^3.0.0",
     "remove-files-webpack-plugin": "^1.1.3",
     "sass": "^1.57.1",
