Update Playwright version (#1110)
Update Playwright

- Update Playwright
- Update e2e tools

--- a/package.json
+++ b/package.json
@@ -17,10 +17,9 @@
     "@babel/plugin-proposal-optional-chaining": "*",
     "@commitlint/cli": "^12.1.4",
     "@greenpeace/dashdash": "^1.2.1",
-    "@playwright/test": "^1.35.1",
     "@wordpress/components": "^8.5.0",
     "@wordpress/data": "^4.9.2",
-    "@wordpress/e2e-test-utils-playwright": "^0.1.0",
+    "@wordpress/e2e-test-utils-playwright": "^0.8.0",
     "@wordpress/eslint-plugin": "^14.3.0",
     "@wordpress/scripts": "3.3.0",
     "autoprefixer": "^9.7.0",
@@ -34,6 +33,7 @@
     "lodash.assign": "^4.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "playwright": "^1.37.1",
     "postcss-loader": "^3.0.0",
     "sass": "^1.57.1",
     "sass-loader": "^7.3.1",
